# wish

./: .gitattributes  .gitignore  .golangci.yml  .graphqlrc  .oxfmtrc.json  Cargo.toml  go.mod  go.sum  make.ps1  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  wish.slnx
Modules/Extras/: Extras.psd1  Extras.psm1
Modules/GithubRelease/: GithubRelease.psd1  GithubRelease.psm1  globalTools.yml  releases.yml
Modules/LSColors/: LSColors.csproj  LSColors.psd1
Modules/Math/: Math.psd1  Math.psm1
Modules/PSCoreAudio/: Device.cs  PSCoreAudio.csproj  PSCoreAudio.psd1  Program.cs
Modules/PSCoreAudioUnitTests/: PSCoreAudioUnitTests.cs  PSCoreAudioUnitTests.csproj
_/: .bash_profile  .bashrc  .oxfmtrc.json
internal/: algo.ps1  httpServer.ps1  iter.sh  page.sh  string.sh
scripts/: Export-EnvrionmentVariables.ps1  Initialize-CodeEditor.ps1  Initialize-Computer.ps1  Initialize-Dotfiles.ps1  Initialize-GitMsys.ps1  Initialize-Gnome.ps1  Initialize-LinuxMachine.ps1  Initialize-LinuxUser.ps1  Initialize-Niri.ps1  Initialize-Tasks.ps1  Initialize-WindowsMachine.ps1  Initialize-WindowsUser.ps1  Invoke-CodeFormatter.ps1  Repair-GitSymlinks.ps1  Save-SystemData.ps1  Select-Theme.ps1  Set-DarkMode.ps1  Set-UnsplashWallpaper.ps1  Start-Program.ps1  Sync-WebDav.ps1  Update-LinuxRelease.ps1  aiovideo.py  bootstrap.sh  darkmode_windows.py  edge_darkmode_windows.py  handy.sh  jsonPath.ts  liuqian_magic.py  qq_email.py  sortJson.ts  termux-prepare.md  termux_bootstrap.sh  termux_export_environment.sh  theme.sh  update_release.sh  weixin_grab_messages.py  x_mouse_windows.py
(+449 files in other folders)
