[project]
name = "wish"
version = "0.1.0"
description = "Python part of the wise shell."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.12.15",
  "fire>=0.7.0",
  "ipykernel>=7.1.0",
  "lxml>=5.4.0",
  "pandas>=2.2.3",
  "pycryptodome>=3.23.0",
  "pynput>=1.8.1 ; sys_platform == 'win32'",
  "pyperclip>=1.11.0",
  "requests>=2.32.5",
  "uiautomation>=2.0.20 ; sys_platform == 'win32'",
]
